--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,7 @@
     <artifactId>JavaIntro</artifactId>
     <version>1.0-SNAPSHOT</version>
     <repositories>
-        <repository>
-            <id>mvn</id>
 
-            <url>https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api</url>
-        </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -49,6 +45,17 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
+            <version>2.22.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.22.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.22.1</version>
         </dependency>
     </dependencies>
