jakarta persistance added

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>hibernate-core</artifactId>
             <version>6.2.0.CR1</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
